# threat-advisory

./: .env.clean  .env.production  .env.production.perfect  .env.production.template  .env.template  .gitignore  ADVISORY_SUMMARY.md  API.md  API_REFERENCE.md  ARCHITECTURE_FLOWCHARTS.md  BUILD_FIX_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COLOR_SYSTEM_COMPLETE.md  COMPLETE_OAUTH_SOLUTION.md  COMPLETE_RESET.ps1  COMPREHENSIVE_COLOR_FIX_SUMMARY.md  COMPREHENSIVE_UI_UPDATE_STATUS.md  CONTRIBUTING.md  CRITICAL_BUILD_FIXES_APPLIED.md  CVESEARCH_BUILD_ERROR_FIX.md  CVESEARCH_COMPLETE_FIX.md  CVESEARCH_FINAL_SYNTAX_FIXES.md  CVESEARCH_SYNTAX_FIX.md  CVE_SEARCH_FIXES.md  CVE_SEARCH_INTEGRATION_SUMMARY.md  CYBERSECURITY_UI_COMPLETE.md  CYBERSECURITY_UI_REDESIGN.md  DASHBOARD_CVE_UI_UPDATE_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CONFIG_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_SUMMARY.md  FINAL_LINK_VERIFICATION.md  FINAL_STATUS_REPORT.md  FINAL_UI_AUDIT_COMPLETE.md  FINAL_UI_TRANSFORMATION_COMPLETE.md  (+110 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  data_contribution.md  feature_request.md
.github/workflows/: deploy-docs.yml  deploy.yml  validate-data.yml  validate-patterns.yml
advisories/: CONTRIBUTING.md  README.md  TEMPLATE.md
advisories/apt/: apt29-campaign.json
advisories/cve/: cve-2024-12345.json
advisories/malware/: ransomware-variant.json
advisories/threat/: supply-chain-risks.json
advisories/vulnerability/: webserver-pro-auth-bypass.json
backend/: .dockerignore  Dockerfile  Dockerfile.prod  Dockerfile.production  Dockerfile.production.fixed  alembic.ini  init_database.py  init_db.py  list_users.py  requirements-test.txt  requirements.txt  run_tests.py  test_oauth_direct.py  wsgi.py
data/: CONTRIBUTING-PLAYBOOK.md  README.md  SUMMARY.md  categories.json  products.json  severity-levels.json  vendors.json
db/: init.sql  migration_add_product_fields.sql
docs/: 404.html  CNAME  README.md  code-of-conduct.html  contributing.html  docs.html  getting-started.html  governance.html  index.html  license.html  pattern-database.html  pattern-summary.html  robots.txt  sitemap.xml  tools.html
frontend/: .env  .env.example  Dockerfile  Dockerfile.production  nginx.conf  nginx.production.conf  package-lock.json  package.json  tailwind.config.js
patterns/: CONTRIBUTING.md  README.md  TEMPLATE.md  service_banners_common.json
scripts/: backup.sh  monitor.sh  update.sh
tools/: README.md  generate-advisory-summary.py  generate-pattern-summary.py  validate-advisory.py  validate-all-advisories.py  validate-all-patterns.py  validate-html.py  validate-pattern.py
vulnscan/: .env.example  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml  requirements_specification.md
vulnscan/.kiro/specs/security-scanner-platform/: design.md  requirements.md  tasks.md
vulnscan/alembic/: env.py
vulnscan/alembic/versions/: 0001_initial_schema.py
vulnscan/patterns/: http_headers.json  service_banners.json
vulnscan/src/security_scanner/: __init__.py
vulnscan/src/security_scanner/cli/: __init__.py  main.py
vulnscan/src/security_scanner/core/: banner_grabber.py  config.py  cve_lookup.py  database.py  exceptions.py  logging.py  nvd_lookup.py  patterns.py  vulners_lookup.py
vulnscan/src/security_scanner/models/: __init__.py  core.py  database.py  enums.py  repositories.py  validators.py
vulnscan/src/security_scanner/regex/: __init__.py  patterns.py  validation.py
(+166 files in other folders)
